# llm-code-deploy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: index.html
docs/: index.html
server/: faculty_server.py
src/student_agent/: __init__.py  cli.py  github_api.py  verify_sre.py
tests/: test_verify_sre.py
tests/fixtures/: sample_sre.json
