[project]
name = "llm-code-deploy"
version = "0.1.0"
description = "Deterministic Student Agent & Evaluation Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sarbajit Kumar De" }]

dependencies = [
  "click>=8.1",
  "pydantic>=2",
  "cryptography>=42",
  "python-jose[cryptography]>=3.3",
  "rich>=13",
  "requests>=2",
  "httpx>=0.27",
  "pyyaml>=6",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pytest>=8.4.2",
  "ruff>=0.13.3",
]

[project.scripts]
student-agent = "student_agent.cli:cli"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/student_agent"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
fix = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
